# urban-environment-point-cloud

./: ProjectHome.md
final_system/: CMakeLists.txt  anf.cpp  svm_wrapper.h
final_system/data/: Elephant_1.data_input  Elephant_1.info  Elephant_1.prediction  Facade_1.info  Facade_1.model  Facade_1.prediction  Fontaine_1.data_input  Fontaine_1.model  Place_1.data_input  Place_1.prediction  Statues_1.data_input  Statues_1.prediction  Theatre_1.data_input  Theatre_1.info  Theatre_1.model  Theatre_1.prediction
final_system/src/: cluster_information.cpp  cluster_information_v0.cpp  cluster_information_v1.cpp  cluster_information_v1.cpp~  cluster_information_v2.cpp~  extract_clusters.hpp  global_information.cpp  noise_filtering.cpp  object_classification.cpp  object_classification.cpp~  object_classification_v2.cpp~  object_classification_v3.cpp  object_clustering.cpp  plane_segmentation.cpp
final_system/src/svm/: svm-wrapper.cpp  svm_wrapper.cpp
florentinus/: bunny.pcd  output.pcd
mattia/PCA_filter/: createcloud.cpp  edge_contour_extraction.hpp  main.cpp
mattia/PCA_filter/test/: pca_removal.h
mattia/clustering_classification/: CMakeLists.txt  classification.h  main.cpp  svm-bus.h  svm-train.h  svm-wrapper.cpp  svm.cpp  svm.h  svm_wrapper.cpp  svm_wrapper.h  test_predictor.cpp
mattia/clustering_classification/.kdev4/: clustering_classification.kdev4
mattia/clustering_classification/SVM/: svm.cpp
mattia/clustering_classification/svn_backup/: CMakeLists.txt  classification.h  main.cpp  regionGrowing.h  svm-train.h  svm.cpp  svm.h
mattia/filters/: CMakeLists.txt  benchmark-compare.cpp  bilateral.cpp  filters.kdev4  main.cpp  radiusRem.cpp  statistical.h  statistical_backup.h  text.txt
mattia/range_image/: CMakeLists.txt  crop.cpp  main.cpp  range.cpp
mattia/testSVM/: CMakeLists.txt  main.cpp  svm-train.h  svm.cpp  testSVM.kdev4
result_viewer/: view.cpp
trunk/final_system/: CMakeLists.txt  anf.cpp  global.model  svm_wrapper.h
trunk/final_system/data/: Elephant_1.model  Facade_1.data_input  Fontaine_1.info  Fontaine_1.prediction  Place_1.info  Place_1.model  Statues_1.info  Statues_1.model
trunk/final_system/src/: cluster_information.cpp  cluster_information.cpp~  cluster_information_v2.cpp  extract_clusters.h  extract_clusters.hpp~  global_information.cpp  object_classification.cpp  object_classification_v0.cpp  object_classification_v3.cpp  object_classification_v3.cpp~  object_clustering.cpp  object_clustering.cpp~  plane_segmentation.cpp
trunk/final_system/src/svm/: svm-wrapper.cpp  svm.cpp
trunk/florentinus/: CMakeLists.txt  ground_and_wall_removal.h  isolated_removal.h  pre-processor.cpp
trunk/mattia/PCA_filter/: .fuse_hidden000002cd00000008  CMakeLists.txt  PCA_filter.kdev4  edge_contour_extraction.h  edge_contour_extraction.hpp  main.cpp
trunk/mattia/PCA_filter/.kdev4/: PCA_filter.kdev4
trunk/mattia/PCA_filter/test/: pca_removal.cpp
trunk/mattia/clustering_classification/: CMakeLists.txt  classification.h  extract_features.h  main.cpp  svm-bus.cpp  svm-train.h  svm-wrapper.cpp  svm.cpp  svm.h  svm_wrapper.h  test_predictor.cpp
trunk/mattia/clustering_classification/.kdev4/: clustering_classification.kdev4
trunk/mattia/clustering_classification/SVM/: svm.cpp  svm_wrapper.cpp
trunk/mattia/clustering_classification/svn_backup/: clustering_classification.kdev4  main.cpp  svm.cpp  svm.h  test_predictor.cpp
trunk/mattia/filters/: .radiusRem.cpp.kate-swp  benchmark.kdev4  bilateral.cpp  classification.h  cropped_leaves.pcd  opencv_cloud.h  regionGrowing.h
trunk/mattia/filters/.kdev4/: benchmark.kdev4  filters.kdev4
trunk/mattia/range_image/: CMakeLists.txt  graph_cut.cpp
trunk/mattia/testSVM/: CMakeLists.txt  main.cpp  svm-train.c  svm-train.h  testSVM.kdev4
trunk/mattia/testSVM/.kdev4/: testSVM.kdev4
trunk/result_viewer/: view
