cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
project(Pre-Processor)
find_package(PCL 1.6 REQUIRED)
include_directories(${PCL_INCLUDE_DIRS})
set(LIBS ${LIBS} ${PCL_LIBRARIES})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable(pp pre-processor.cpp)
target_link_libraries(pp ${PCL_LIBRARIES})

